--- a/tutorials/openscad/openscad-vars.adoc
+++ b/tutorials/openscad/openscad-vars.adoc
@@ -1,31 +1,29 @@
-Proměnné v OpenSCADu: Co jde a co ne
-------------------------------------
+= Proměnné v OpenSCADu: Co jde a co ne
 
-[source,cpp]
-----
-// Jednotlivé bloky oddělené komentářem uvažujte v jiném souboru (tedy nezávisle na ostatních)
-
-
-// tohle jde
+.Tohle jde
+[source,scad]
 variable = 5;
 
 
 
-// tohle nejde
-// respektive nebude to fungovat tak, jak byste si mohli myslet
+.Tohle nejde. Respektive nebude to fungovat tak, jak byste si mohli myslet
+[source,scad]
 variable = 5;
 echo(variable);
 variable = 6;
 echo(variable);
 
 
-// tohle jde
+.Tohle jde, protože hodnoty argumentů existují v jiném namespacu
+[source,scad]
 module foo(arg) {
     arg = 3;
 }
 
 
-// změněná hodnota arg bude platiti jen uvnitř těla ifu
+.Změněná hodnota arg bude platiti jen uvnitř těla ifu
+[source,scad]
+----
 module foo(a) {
     a = 5;
     echo(a); // a je 5
@@ -39,39 +37,48 @@ module foo(a) {
     }
     echo(a); // a je 5
 }
+----
 
-
-// tohle ale jde
+.Tohle ale jde
+[source,scad]
+----
 module foo(arg) {
     arg = arg >= 0 ? arg : 0;
     // ... arg je změněný, pokud něco
 }
+----
 
 
-// ale samozřejmě, arg je v celém modulu stejný
+.Ale samozřejmě, arg je v celém modulu stejný
+[source,scad]
+----
 module foo(arg) {
     echo(arg); // vypíše změněný arg!
     arg = arg >= 0 ? arg : 0;
 }
+----
 
-
-// jde to ale udělat jenom jednou
-// tohle nejde
+.Jde to ale udělat jenom jednou, tohle nejde
+[source,scad]
+----
 module foo(arg) {
     arg = 5;
     echo(arg); // 3
     arg = 3;
 }
+----
 
 
-// ani tohle nejde
+.Ani tohle nejde
+[source,scad]
+----
 module foo(arg) {
     arg = arg >= 0 ? arg : 0;
     arg = arg <= 10 ? arg : 10;
 }
-
-
-// musí se to spojit do jednoho komplikovaného ternárního operátoru
-// nebo si na to napsat funkci a udělat:
-arg = xyz(arg);
 ----
+
+
+.Musí se to spojit do jednoho komplikovaného ternárního operátoru nebo si na to napsat funkci
+[source,scad]
+arg = xyz(arg);
