--- a/tutorials/index.adoc
+++ b/tutorials/index.adoc
@@ -6,7 +6,7 @@ Změna programu vyhrazena.
 |=======================================================================
 |Cvičení |Datum |Téma |Body
 |1. |2.10.2018 |xref:course#[Principy předmětu],
-xref:reprap#[RepRap] |0
+xref:reprap#[RepRap], xref:git#[Git] |0
 
 |2. |9.10.2018 |xref:openscad#[OpenSCAD: Základy] |3
 
